<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="P_SheetAlignTable" Id="{2894f9a6-2f38-4cc2-a036-564351822d6b}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM P_SheetAlignTable
VAR
	(*Initialization*)
	bSAT_OK		: BOOL;
	bError		: BOOL;
	bStart		: BOOL;
	bStop		: BOOL;
	(*Process*)
	bBlowerEnable 	: BOOL;
	bBlowerOn		: BOOL;
	bBlowerOff		: BOOL;
	bOverride		: BOOL;
	//-----------------------------------------(*Case*)-----------------------------------------------------
	//iSATcase : INT;
	(* Reference for Sheet Align State
(
	State_Init 					,
	State_AutoStart         	,
	State_AutoStop          	,
	State_AutoBlowerOn			,
	State_AutoBackToInit        ,
	State_Override				,
	State_Error					,
);
	*)	
END_VAR
VAR_INPUT
	bStartCommand : BOOL;
	bSheetDetect	:BOOL;
END_VAR
VAR_OUTPUT
	iSATcase : INT;
	nSheetAmount	: INT;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[bSAT_OK:=bSAT_OK;
CASE iSATcase OF

SheetAlignState.State_Init :
	bSAT_OK:=FALSE;
	IF bSAT_OK AND bStartCommand AND 
	   (NOT bError) THEN
		iSATcase:=SheetAlignState.State_AutoStart;
		bSAT_OK :=TRUE;
	ELSE
		iSATcase := SheetAlignState.State_Init;
	END_IF
	
SheetAlignState.State_AutoStart :
	(*Business Logic here*)
	iSATcase :=SheetAlignState.State_AutoBlowerOn;
	//bSAT_OK :=TRUE;

SheetAlignState.State_AutoStop :
	iSATcase :=SheetAlignState.State_Error;

SheetAlignState.State_AutoBlowerOn :
	IF bError THEN
		iSATcase :=	SheetAlignState.State_Error;
		bSAT_OK:=FALSE;
	END_IF
	IF bStop THEN
		iSATcase := SheetAlignState.State_AutoBackToInit;
	END_IF
	IF bSheetDetect THEN
		nSheetAmount:=nSheetAmount+1;
	ELSE
		nSheetAmount := nSheetAmount;
	END_IF
	
SheetAlignState.State_AutoBackToInit :
	iSATcase := SheetAlignState.State_Init;
	
SheetAlignState.State_Override :
	IF bBlowerEnable THEN
		bBlowerOn:=bBlowerOn;
		bBlowerOff:=FALSE;
	END_IF
	IF NOT bBlowerEnable THEN
		bBlowerOff:=TRUE;
	END_IF
	
SheetAlignState.State_Error :
	IF NOT bError THEN
		iSATcase := SheetAlignState.State_Error;
	END_IF
	bSAT_OK:=FALSE;
END_CASE

IF bOverride THEN
	iSATcase:= SheetAlignState.State_Override;
	bSAT_OK:=TRUE;
END_IF
IF NOT bOverride THEN
	iSATcase := iSATcase;
END_IF
]]></ST>
    </Implementation>
    <LineIds Name="P_SheetAlignTable">
      <LineId Id="108" Count="0" />
      <LineId Id="5" Count="0" />
      <LineId Id="33" Count="1" />
      <LineId Id="109" Count="0" />
      <LineId Id="44" Count="0" />
      <LineId Id="63" Count="0" />
      <LineId Id="45" Count="0" />
      <LineId Id="125" Count="0" />
      <LineId Id="47" Count="1" />
      <LineId Id="46" Count="0" />
      <LineId Id="64" Count="0" />
      <LineId Id="35" Count="0" />
      <LineId Id="160" Count="0" />
      <LineId Id="49" Count="0" />
      <LineId Id="167" Count="0" />
      <LineId Id="158" Count="0" />
      <LineId Id="36" Count="0" />
      <LineId Id="50" Count="0" />
      <LineId Id="61" Count="0" />
      <LineId Id="37" Count="0" />
      <LineId Id="51" Count="1" />
      <LineId Id="111" Count="0" />
      <LineId Id="53" Count="3" />
      <LineId Id="173" Count="3" />
      <LineId Id="172" Count="0" />
      <LineId Id="65" Count="0" />
      <LineId Id="38" Count="0" />
      <LineId Id="62" Count="0" />
      <LineId Id="66" Count="0" />
      <LineId Id="39" Count="0" />
      <LineId Id="117" Count="1" />
      <LineId Id="123" Count="0" />
      <LineId Id="119" Count="3" />
      <LineId Id="124" Count="0" />
      <LineId Id="40" Count="0" />
      <LineId Id="67" Count="0" />
      <LineId Id="20" Count="0" />
      <LineId Id="18" Count="0" />
      <LineId Id="116" Count="0" />
      <LineId Id="19" Count="0" />
      <LineId Id="71" Count="0" />
      <LineId Id="69" Count="0" />
      <LineId Id="72" Count="0" />
      <LineId Id="112" Count="0" />
      <LineId Id="73" Count="3" />
      <LineId Id="68" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>